Implemented /status/home_tsurailine
